[package] 
name = "degen"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# interacting with web browser
stdweb = "0.4.18"
ncollide2d = "0.21.0"
nalgebra = { version = "0.19.0", features = ["serde-serialize"] }
serde = { version = "1.0.102", features = ["serde_derive"] }
