[package]
name = "admin"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# us
comn = { path = "../comn" }

# networking
tungstenite = "0.9.1"

# util
pretty_env_logger = "0.3.1"
