[package] 
name = "degen"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# interacting with web browser
stdweb = "0.4.18"

# us
comn = { path = "../comn" }

# math/ecs (have to use the non-parallel versions of these, WASM sucks like that)
specs = { version = "0.15.1", features = ["specs-derive", "stdweb"], default-features = false }
specs-physics = { git = "https://github.com/cedric-h/specs-physics.git", branch = "default-parallel-feature", features = ["serde-serialize"], default-features = false }

# serialization
serde = { version = "1.0.99", features = ["derive"] }

[patch.crates-io]
shred = { git = "https://github.com/mystal/shred", branch = "fix_no_parallel" }
